--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,25 @@
 <body>
 
     <!-- header -->
+    <header class="container-fluid bg-dark py-3 px-5">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="col-lg-10 mx-auto">
+                    <div class="header-logo text-white float-left"><img src="#"></div>
+                    <div class="header-nav text-right float-right">
+                        <nav class="text-right">
+                            <ul class="text-white">
+                                <li class="d-inline-block">dummy</li>
+                                <li class="d-inline-block">dummy</li>
+                                <li class="d-inline-block">dummy</li>
+                                <li class="d-inline-block">dummy</li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
     <!-- main-visual -->
 
