--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- header -->
-    <header class="container-fluid bg-dark py-3 px-5">
+    <header class="container-fluid bg-dark py-4 px-5">
         <div class="row">
             <div class="col-lg-12">
                 <div class="col-lg-10 mx-auto">
@@ -30,6 +30,21 @@
     </header>
 
     <!-- main-visual -->
+    <div class="vh-100 d-flex flex-column">
+        <div class="flex-grow-1 position-relative d-flex">
+            <div class="position-absolute h-100 w-100">
+                <img src="blue-259458_1280.jpg" width="100%" height="90%"></img>
+            </div>
+            <div class="container align-self-center align-self-lg-center">
+                <div class="row pb-4 pb-md-5 pb-lg-0">
+                    <div class="col-12 col-lg-6 ml-lg-auto d-flex flex-column align-items-center">
+                        <p class="lead my-3 my-md-5 my-lg-4 text-white">dummy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- servise -->
 
