--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,6 +48,62 @@
 
     <!-- servise -->
 
+    <div class="container-fluid pb-4">
+        <div class="row">
+            <div class="col-12 pl-4 pb-5">
+                <h3>SERVICE</h3>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="card pickup-item">
+                    <div class="card-body text-center">
+                        <p class="headline-type2">
+                        <span class="font-weight-bolder">
+                            dummy
+                        </span>
+                        </p>
+                    <p>dummy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="card pickup-item">
+                    <div class="card-body text-center">
+                        <p class="headline-type2">
+                        <span class="font-weight-bolder">
+                            dummy
+                        </span>
+                        </p>
+                        <p>dummy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="card pickup-item">
+                    <div class="card-body text-center">
+                        <p class="headline-type2">
+                        <span class="font-weight-bolder">
+                            dummy
+                        </span>
+                        </p>
+                        <p>dummy</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-3">
+                <div class="card pickup-item">
+                    <div class="card-body text-center">
+                        <p class="headline-type2">
+                        <span class="font-weight-bolder">
+                            dummy
+                        </span>
+                        </p>
+                        <p>dummy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- company -->
 
     <!-- contact -->
