--- a/layouts/index.html
+++ b/layouts/index.html
@@ -106,6 +106,58 @@
 
     <!-- company -->
 
+    <div class="container-fluid py-5 px-5">
+        <h3 class="pb-5">COMPANY</h3>
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="blue-259458_1280.jpg" width="100%">
+            </div>
+            <div class="col-lg-6">
+                <table class="table table-custom">
+                    <tbody>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="col" class="text-nowrap pr-5 d-block d-lg-table-cell">dummy</th>
+                            <td scope="col" class="d-block d-lg-table-cell">
+                                <p>dummy</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
     <!-- contact -->
 
     <!-- footer -->
