--- a/layouts/index.html
+++ b/layouts/index.html
@@ -160,5 +160,29 @@
 
     <!-- contact -->
 
+    <div class="container-fluid px-5 py-5">
+        <div class="row">
+            <div class="col-12">
+                <h3 class="pb-5">Contact</h3>
+                <form class="col-lg-6 mx-auto">
+                    <div class="form-group mb-4">
+                        <input type="name" class="form-control" id="exampleInputEmail1" placeholder="お名前">
+                    </div>
+                    <div class="form-group mb-4">
+                        <input type="email" class="form-control" id="exampleInputPassword1" placeholder="メールアドレス">
+                    </div>
+                    <div class="form-group mb-4">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="件名">
+                    </div>
+                    <div class="form-group mb-4">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="本文" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">送信する</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <!-- footer -->
 </body>
