--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Revolte</title>
@@ -185,4 +185,41 @@
 
 
     <!-- footer -->
+
+    <div class="container-fluid mx-auto bg-dark py-4 px-5">
+        <div class="col-12 mx-auto">
+            <div class="row">
+                <div class="col-6 text-left">
+                    <ul>
+                        <li class="d-inline-block">
+                            <a href="#" class="text-white">プライバシーポリシー</a>
+                        </li>
+                        <li class="d-inline-block ml-4">
+                            <a href="#" class="text-white">採用情報</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-6 text-right">
+                    <ul>       
+                        <li class="d-inline-block text-white pr-4">
+                            <i class="fab fa-twitter"></i>
+                            <a href="#" class="text-white">Twitter</a>
+                        </li>
+                        <li class="d-inline-block text-white pr-4">
+                            <i class="fab fa-facebook-f"></i>
+                            <a href="#" class="text-white">Facebook</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <hr class="border border-danger">
+            </div>
+            <div class="col-12 text-center">
+                <p class="text-white">Copyright © 株式会社Revolte All Rights Reserved.</p>
+            </div>            
+        </div>
+    </div>
+
 </body>
